Fix: link fixes

--- a/Screens/Authentication/profilepage.html
+++ b/Screens/Authentication/profilepage.html
@@ -50,7 +50,7 @@
                         <p>Lorem Ipsum</p>
                     </div>
 
-                    <button class="btn btn-primary authentication-btn error-btn">Log Out</button>
+                    <button class="btn btn-primary authentication-btn error-btn" onclick="window.location.href='/index.html';">Log Out</button>
                     <button class="btn btn-outlined authentication-outlined-btn error-outlined-btn">Deactivate My Account</button>
                     
                 </div>
