--- a/Screens/Cart-Mangement/mycart.html
+++ b/Screens/Cart-Mangement/mycart.html
@@ -17,7 +17,7 @@
        
         <nav class="rr-nav-box">
             <input class="nav-search" type="search" placeholder="Search">
-            <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon" onclick="window.location.href='/Screens/Authentication';"><i class="fa fa-user" aria-hidden="true"></i>
+            <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon" onclick="window.location.href='/Screens/Authentication/profilepage.html';"><i class="fa fa-user" aria-hidden="true"></i>
             </button></div>
             <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon" onclick="window.location.href='/Screens/Wishlist/wishlist.html';"><i class="fa fa-heart" aria-hidden="true"></i>
             </button></div>
