--- a/Screens/Order-Summery/ordersummary.html
+++ b/Screens/Order-Summery/ordersummary.html
@@ -15,17 +15,17 @@
 <body>
     <header class="rr-nav-container">
         <div class="header-logo"><a href="#"><img class="logo"
-                    src="../../Images-Ecom/Picture2-removebg-preview.png"></a></div>
+                    src="/Images-Ecom/rr-logo.png"></a></div>
 
         <nav class="rr-nav-box">
             <input class="nav-search" type="search" placeholder="Search">
-            <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon"><i class="fa fa-user"
+            <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon" onclick="window.location.href='/Screens/Authentication/profilepage.html';"><i class="fa fa-user"
                         aria-hidden="true"></i>
                 </button></div>
-            <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon"><i class="fa fa-heart"
+            <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon" onclick="window.location.href='/Screens/Wishlist/wishlist.html';"><i class="fa fa-heart"
                         aria-hidden="true"></i>
                 </button></div>
-            <div class="nav-item "><button class="btn btn-float nav-btn nav-btn-icon "><i class="fa fa-sign-out"
+            <div class="nav-item "><button class="btn btn-float nav-btn nav-btn-icon" onclick="window.location.href='/index.html';"><i class="fa fa-sign-out"
                         aria-hidden="true"></i>
                 </button></div>
         </nav>
