--- a/Screens/Wishlist/wishlist.html
+++ b/Screens/Wishlist/wishlist.html
@@ -20,7 +20,7 @@
             <input class="nav-search" type="search" placeholder="Search">
 
             <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon"
-                    onclick="window.location.href='/Screens/Authentication';"><i class="fa fa-user"
+                    onclick="window.location.href='/Screens/Authentication/profilepage.html';"><i class="fa fa-user"
                         aria-hidden="true"></i>
                 </button></div>
             <div class="nav-item"><button class="btn btn-float nav-btn nav-btn-icon"
