Feat: added Featured week special categories

--- a/index.html
+++ b/index.html
@@ -46,6 +46,27 @@
                 onclick="window.location.href='/Screens/Product-Listing/productlisting.html';">Explore Now</button>
         </div>
 
+        <div class="landing-categories-wrapper">
+            <div class="categories-tab-wrapper">
+                <div class="card card-shadow">
+    
+                    <h3 class='card-title' >DC</h3>
+                    <p>This week Specials: </p>                   
+                    <div>Batman Edition #150</div>
+                    <div>Superman Edition #958</div>
+                    <div>Aquaman Edition</div>                 
+                </div>
+
+                <div class="card card-shadow">
+                    <h3 class='card-title' >DC</h3>
+                    <p>This week Specials: </p>                   
+                    <div>Batman Edition #150</div>
+                    <div>Superman Edition #958</div>
+                    <div>Aquaman Edition #420</div>                   
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
