Refactor:  changed button names added onclick

--- a/Screens/Wishlist/wishlist.html
+++ b/Screens/Wishlist/wishlist.html
@@ -47,34 +47,8 @@
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
-                        </div>
-                        <div class="card-prod-description">
-                            <div class="rr-card-container">
-                                <h3 class="product-title">Robin #130</h3>
-                                <button class="btn btn-icon like-btn rr-product-like-btn"
-                                    onclick="window.location.href='/Screens/Cart-Mangement/mycart.html';"><i
-                                        class="fa fa-heart"></i></button>
-                            </div>
-
-                            <div class="product-price product-title">
-                                <p>Rs. 200</p>
-                                <p class="card-text-decoration">Rs. 400</p>
-                                <p>50% off</p>
-                            </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="wishlist-box-card">
-                    <div class="card card-shadow product-card-bg">
-                        <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -88,7 +62,7 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
@@ -97,8 +71,8 @@
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -112,17 +86,18 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
 
 
+
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -136,7 +111,7 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
@@ -145,8 +120,8 @@
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -160,7 +135,7 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
@@ -169,8 +144,8 @@
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -184,7 +159,7 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
@@ -193,8 +168,8 @@
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -208,17 +183,18 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
 
 
+
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -232,7 +208,7 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
@@ -241,8 +217,8 @@
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -256,17 +232,16 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
 
-
                 <div class="wishlist-box-card">
                     <div class="card card-shadow product-card-bg">
                         <div>
-                            <img class='image-responsive check-img' style='padding:0.5rem;'
-                                src='/Images-Ecom/product Image.jpg' alt='product image' />
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
                         </div>
                         <div class="card-prod-description">
                             <div class="rr-card-container">
@@ -280,7 +255,31 @@
                                 <p class="card-text-decoration">Rs. 400</p>
                                 <p>50% off</p>
                             </div>
-                            <button class="btn btn-primary card-btn product-btn">Move To Cart</button>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="wishlist-box-card">
+                    <div class="card card-shadow product-card-bg">
+                        <div>
+                            <img class='image-responsive .rr-card-img-p' src='/Images-Ecom/product Image.jpg'
+                                alt='product image' />
+                        </div>
+                        <div class="card-prod-description">
+                            <div class="rr-card-container">
+                                <h3 class="product-title">Robin #130</h3>
+                                <button class="btn btn-icon like-btn rr-product-like-btn"><i
+                                        class="fa fa-heart"></i></button>
+                            </div>
+
+                            <div class="product-price product-title">
+                                <p>Rs. 200</p>
+                                <p class="card-text-decoration">Rs. 400</p>
+                                <p>50% off</p>
+                            </div>
+                            <button class="btn btn-primary card-btn product-btn">Add To Cart</button>
                         </div>
                     </div>
                 </div>
